Oct 2022 - 2.3
- Improvement: Code optimization (TNX JohnS0819)
    https://github.com/ea4k/klog/pull/485
- Bugfix: Calls like EA4K/P were not identified as EA.
- Bugfix: Adding DXCluster servers was failing. (Closes #492) (TNX EA7IXM)
- Bugfix: When accepting changes on Settings, the settings were being readed twice, causing errors an delays. (Closes #495)
- Improvement UI: Freq & RST labels have been reorganized for clarity.
- Improvement: Windows package updated to hamlib 4.4.
- Improvement: Minor UI changes in the Setup->misc tab.
- Improvement: Showing seconds in the QSO edit can be selected by the user.
- Improvement: LoTW upload process allows the user to select a specific locator to be uploaded to be matched with TQSL locations.
- Improvement: Changed how hamlib is initialized to speed-up the setup widget exit, specially for non-hamlib users.

Aug 2022 - 2.2.1
- Bugfix: Temporary bugfix for Setup eLog Page preventing crash on start. (Closes #489)
- Bugfix: Temporary quick fix to prevent call validation in some classes that may cause errors. (Opens #490)
- Bugfix: Config for real time for clublog was not properly managed.
- Bugfix: Calls like EA4K/MM were identified like Scotland, not maritime.
- Improvement: Code improvement in the Setup of eLogs.
- Tests: Tests for SetupPageElog added.

Aug 2022 - 2.2
- Bugfix: DL was not properly shown in the DXCC status table (Closes #460) (TNX N6PAZ)
- Bugfix: Clublog QSO status export to file was not properly done.
- Bugfix: Removing first char in the callsign caused a crash. (Closes #455) (TNX G4MKT)
- Bugfix: Database was not beig properly created in first start.
- Bugfix: Changing the statistic widget crashed KLog. (Closes #484)
- Bugfix: Some prefixes were not properly identified.
- Bugfix: Fixed some database column name typos.
- Improvement: Callsign identification optimized.
- Improvement: The Debug logging has been improved, still much work TBD.
- Improvement: General code cleaning (coveralls.io)