@@ -40,7 +40,7 @@
 #include "utilities.h"
 
 class QSqlRelationalTableModel;
-const float DBVersionf = 0.024f; // This is the latest version of the DB.
+const float DBVersionf = 0.025f; // This is the latest version of the DB.
 
 
 struct AwarddxccEntry
@@ -165,6 +165,7 @@ private:
     bool updateTo022(); // Recovers the 020 that was not executed and adds the Q65 mode
     bool updateTo023(); // Fixes the cabrillo fields in the table band
     bool updateTo024(); // Fixes the entity table fixinf the DL id
+    bool updateTo025(); // Adds modes from ADIF 3.1.3
 
     bool updateTableLog(const int _v);
     bool updateDBVersion(QString _softV, QString _dbV);
