@@ -4,6 +4,7 @@ Oct 2022 - 2.3
 - Bugfix: Calls like EA4K/P were not identified as EA.
 - Bugfix: Adding DXCluster servers was failing. (Closes #492) (TNX EA7IXM)
 - Bugfix: When accepting changes on Settings, the settings were being readed twice, causing errors an delays. (Closes #495)
+- Improvement: Added the modes and propagation modes of ADIF  3.1.3 (Closes #509, #510)
 - Improvement UI: Freq & RST labels have been reorganized for clarity.
 - Improvement: Windows package updated to hamlib 4.4.
 - Improvement: Minor UI changes in the Setup->misc tab.
